tests/NormalTests/paczka1/fuzzy1/76016214.err
Error in line 10: HRNd S674 50,7
Error in line 20: RDGqo5T9h4 A761 20,8
Error in line 24: A432 A761 90,8
